@@ -1,4 +1,7 @@
 
+2009-04-10 16:15 Ali aliov@xfce.org 
+	 * : Fix the session restart command in the previous revision
+
 2009-04-10 16:00 Ali aliov@xfce.org 
 	 * : Connect to the session using libxfcegui4 and properly shutdown when the session dies
 
